--- a/src/input.css
+++ b/src/input.css
@@ -1,6 +1,3 @@
-
-@import "./components/buttons.css";
-@import "./components/card.css";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -11,4 +8,9 @@
 }
 li:hover .dropbtn{
     display: grid;
+    
+
+}
+.myDropDown{
+    display: none;
 }
