--- a/src/input.css
+++ b/src/input.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+.dropdown{
+    display: none;
+}
 .dropbtn{
     display: none;
   
@@ -11,6 +14,6 @@ li:hover .dropbtn{
     
 
 }
-.myDropDown{
-    display: none;
+.show{
+    display: block;
 }
